# patentpick

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
docs/: module_architecture.md
resources/AI-Growth-Lab_PatentSBERTa/: config.json  model.safetensors  modules.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.txt
src/: config.toml  documents.rs  emails.rs  lib.rs  main.rs  models.rs  mpnet.rs  opensearch_handler.rs  retrieve.rs  settings.rs  vectordb.rs
tests/: test_documents.rs  test_emails.rs  test_mpnet.rs  test_opensearch_handler.rs  test_settings.rs  test_vectordb.rs
