[package]
name = "patentpick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
hf-hub = { version = "0.3.2", features = ["tokio"] }
lettre = "0.11.3"
maud = "0.26.0"
serde = { version = "1.0.196", features = ["derive"] }

