[package]
name = "patentpick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
serde = { version = "1.0.196", features = ["derive"] }
lettre = "0.11.3"
maud = "0.26.0"
tokenizers = "0.15.1"
serde_json = "1.0.113"
mpnet-rs = "0.1.0"
opensearch = "2.2.0"
anyhow = "1.0.79"
chrono = "0.4.33"
reqwest = "0.11.24"
config = "0.14.0"

[features]
exclude_from_ci = []